kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storage-organizer
  labels:
    name: storage-organizer
    app: storage-organizer
